SCSS updated to prevent overlap of sign out button Still ugly

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -63,13 +63,24 @@ section {
   border: none;
   left: 10px;
   margin: 40px;
+  position: relative;
 }
 .sign-in-success {
   border: none;
   font-size: 14px;
   margin: 40px;
   padding-bottom: 30px;
+  position: relative;
 }
 .change-password-message {
   border: none;
+  margin: 40px;
+  position: relative;
+}
+.sign-out-message {
+  border-top: 20px;
+  border: none;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
 }
